--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,20 +1,5 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{site.url}}/">Mon site</a>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav"><li><a href="{{site.url}}/">index</a></li>
-                <li><a href="{{site.url}}/about/">A propos</a></li>
-                <li><a href="mailto:exemple@exemple.com">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<ul id="menu_horizontal">
+    <li><a id="menu_label" href="{{site.url}}/">index</a></li>
+    <li><a id="menu_label" href="{{site.url}}/about/">A propos</a></li>
+    <li><a id="menu_label" href="{{site.url}}/blog/">Blog</a></li>
+</ul>
