Menu style done

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,6 @@
-<ul id="menu_horizontal">
-    <li><a id="menu_label" href="{{site.url}}/">index</a></li>
-    <li><a id="menu_label" href="{{site.url}}/about/">A propos</a></li>
-    <li><a id="menu_label" href="{{site.url}}/blog/">Blog</a></li>
+<ul id="menu">
+    <li><a href="{{site.url}}/">index</a></li>
+    <li><a href="{{site.url}}/about/">A propos</a></li>
+    <li><a href="{{site.url}}/blog/">Blog</a></li>
+    <li><a href="{{site.url}}/libs/">Libs</a></li>
 </ul>
