--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,14 @@
     <header class="inner">
       <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
-      <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-      <h3 id="menu">{% include menu.html %}</h3>
+      <nav>{% include menu.html %}</nav>
     </header>
   </div>
 
   <!-- MAIN CONTENT -->
   <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
+      <h1>{{ page.title }}</h1>
       {{ content }}
     </section>
   </div>
