--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <ul id="menu">
     {% for menu in site.menu-lang[page.lang] %}
-        <li><a href="{{menu[1].url}}">{{menu[1].name}}</a></li>
+        <li><a href={{site.url}}/{{menu[1].url}}>{{menu[1].name}}</a></li>
     {% endfor %}
 </ul>
