--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         <li style="float:left">Published with <a href="https://pages.github.com">GitHub Pages</a></li>
         <li> <a href={{site.url}}/{{site.menu-lang["fr"][page.ref].url}}><i class="flag-icon flag-icon-fr"></i></a></li>
         <li> <a href={{site.url}}/{{site.menu-lang["en"][page.ref].url}}><i class="flag-icon flag-icon-gb"></i></a></li>
+        <li> <a href={{site.url}}/{{site.menu-lang["jp"][page.ref].url}}><i class="flag-icon flag-icon-jp"></i></a></li>
       </ul>
       {% include footer.html %}
     </footer>
