--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.8.0/css/flag-icon.min.css">
 
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+
   <title>{{ site.title | default: site.github.repository_name }}</title>
 </head>
 
@@ -39,9 +43,9 @@
       {% endif %}
       <ul id="footer_info">
         <li style="float:left">Published with <a href="https://pages.github.com">GitHub Pages</a></li>
-        <li> <a href={{site.url}}/{{site.menu-lang["fr"][page.ref].url}}><i class="flag-icon flag-icon-fr"></i></a></li>
-        <li> <a href={{site.url}}/{{site.menu-lang["en"][page.ref].url}}><i class="flag-icon flag-icon-gb"></i></a></li>
-        <li> <a href={{site.url}}/{{site.menu-lang["jp"][page.ref].url}}><i class="flag-icon flag-icon-jp"></i></a></li>
+        <li> <a href={{site.url}}/{{site.menu-lang["fr"][page.ref].url}}/{{page.post_url}}><i class="flag-icon flag-icon-fr"></i></a></li>
+        <li> <a href={{site.url}}/{{site.menu-lang["en"][page.ref].url}}/{{page.post_url}}><i class="flag-icon flag-icon-gb"></i></a></li>
+        <li> <a href={{site.url}}/{{site.menu-lang["jp"][page.ref].url}}/{{page.post_url}}><i class="flag-icon flag-icon-jp"></i></a></li>
       </ul>
       {% include footer.html %}
     </footer>
