--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -5,7 +5,7 @@ layout: default
 <div class=container>
     <article class="post"> 
         <h1>{{ page.title }}</h1>
-        <p>{{ page.content }}</p>
+        <p>{{ page.content | remove_first: '&lt;!--more--&gt;' }}</p>
     </article>
     <aside class="navbar">
         {% assign posts=site.posts | where:"lang", page.lang | where:"ref", page.ref %}
