Use kramdown instead of redcarpet

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,9 +21,9 @@ sub {
 }
 
 // Override ul style
-ul {
-    list-style: none;
-}
+//ul {
+//    list-style: none;
+//}
 
 // Override inner
 .inner {
