--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         }
       },
       tex2jax: {
-        inlineMath: [ ['$','$'], ['\\(', '\\)'] ],
+        inlineMath: [ ['$','$'], ['\(', '\)'], ['\\(', '\\)'] ],
         displayMath: [ ['$$','$$'] ],
         processEscapes: true,
       }
