--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,8 @@
 
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-      TeX: {
-        equationNumbers: {
-          autoNumber: "AMS"
-        }
-      },
       tex2jax: {
-        inlineMath: [ ['$','$'], ['\(', '\)'], ['\\(', '\\)'] ],
+        inlineMath: [ ['$','$'] ],
         displayMath: [ ['$$','$$'] ],
         processEscapes: true,
       }
