--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     MathJax.Hub.Config({
       tex2jax: {
         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
       }
     });
