--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,13 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width,maximum-scale=2">
-  {% if post.title %}  
-    <meta name="description" content="{{ post.title }} : {{ post.excerpt | strip_html }}">
+  {% if page.title %}
+    {% assign post=site.posts | where:"title", page.title %}
+    <meta name="title" content="{{ post.title }}">
+    <meta name="description" content="{{ post.excerpt | strip_html }}">
   {% else %}
-    <meta name="description" content="{{ page.ref }} : {{ page.content | strip_html | truncatewords:20 }}">
+    <meta name="title" content="{{ page.ref }}">
+    <meta name="description" content="{{ page.content | strip_html | truncatewords:50 }}">
   {% endif %}
 
   <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
