--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width,maximum-scale=2">
   {% if page.title %}
-    {% assign post=site.posts | where:"title", page.title %}
-    <meta name="title" content="{{ post.title }}">
-    <meta name="description" content="{{ post.excerpt | strip_html }}">
+    <meta name="description" content="{{ page.excerpt | strip_html }}">
   {% else %}
-    <meta name="title" content="{{ page.ref }}">
     <meta name="description" content="{{ page.content | strip_html | truncatewords:50 }}">
   {% endif %}
 
