--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class=container>
     <article class="post"> 
-        <h1>{{ page.title }}</h1>
+        <h1><title>{{ page.title }}</title></h1>
         <p>{{ page.content | remove_first: '&lt;!--more--&gt;' }}</p>
     </article>
     <aside class="navbar">
