--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width,maximum-scale=2">
   {% if page.title %}
+    <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.excerpt | strip_html }}">
   {% else %}
+    <title>{{ page.ref }}</title>
     <meta name="description" content="{{ page.content | strip_html | truncatewords:50 }}">
   {% endif %}
 
