--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,18 +5,18 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width,maximum-scale=2">
-  {% if page.title %}
-    <title>{{ page.title }}</title>
-    <meta name="description" content="{{ page.excerpt | strip_html }}">
+  <!-- {% if page.title %} -->
+  <title>{{ page.title }}</title>
+  <meta name="description" content="{{ page.excerpt | strip_html }}">
   <!-- {% else %}
     <title>{{ page.ref }}</title>
     <meta name="description" content="{{ page.content | strip_html | truncatewords:50 }}"> -->
-  {% endif %}
+  <!-- {% endif %} -->
 
   <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.8.0/css/flag-icon.min.css">
 
-  <title>{{ site.title | default: site.github.repository_name }}</title>
+  <!-- <title>{{ site.title | default: site.github.repository_name }}</title> -->
 
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
