--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -9,8 +9,13 @@ layout: default
     </article>
     <aside class="navbar">
         {% assign posts=site.posts | where:"lang", page.lang | where:"ref", page.ref %}
+        {% assign first_time_visitor = true %}
         <ul>
         {% for post in posts %}
+            {% if first_time_visitor == false%}
+                <hr>
+            {% endif %}
+            {% assign first_time_visitor = false %}
             <li>
                 <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
