Correct small bug

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 
 pre, code {
     background-color: #272822;
+    color: #f8f8f2;
 }
 
 // Redifing sup and sub properly 
@@ -23,6 +24,7 @@ sup {
 sub {
     bottom: -0.25em;
 }
+
 
 // Override ul style
 //ul {
